Refactor: 基于模板方法设计模式重构代码沙箱